<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardView:cardCornerRadius="10dp"
    android:layout_marginBottom="@dimen/activity_verticar_margin"
    android:layout_marginLeft="@dimen/paddingleft_cardview_principal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/pictureCardImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionname_para_picture"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_verticar_margin"
            android:paddingBottom="@dimen/activity_verticar_margin"
            android:background="@color/backgroundtext_card"
            >
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_card"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_word_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    />
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_mirgintop_like"
                >
                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selecter"
                    />
                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_number_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_firstword_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"
                    />

            </LinearLayout>

        </LinearLayout>



    </FrameLayout>

</androidx.cardview.widget.CardView>